--- a/styles/style.css
+++ b/styles/style.css
@@ -22,18 +22,20 @@ ul {
   height: 100%;
 }
 .header-inner .header-nav {
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
+  transition: opacity 0.3s ease;
   top: 0;
   right: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  transform: translateX(100%);
   background-color: #ff2a2a;
-  transition: ease 0.4s;
 }
 .header-inner .header-nav.active {
-  transform: translateX(0);
+  visibility: visible;
+  opacity: 1;
 }
 .header-inner .hamburger {
   width: 48px;
