--- a/styles/style.css
+++ b/styles/style.css
@@ -6,22 +6,13 @@ ul {
   list-style: none;
 }
 
-.header-inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-}
-.header-inner h1 {
+header h1 {
   width: 100px;
 }
-.header-inner h1 img {
+header h1 img {
   margin: 25px 0 0 25px;
-  display: block;
-  width: 100%;
-  height: 100%;
 }
-.header-inner .header-nav {
+header .header-nav {
   visibility: hidden;
   opacity: 0;
   position: absolute;
@@ -33,43 +24,50 @@ ul {
   height: 100vh;
   background-color: #ff2a2a;
 }
-.header-inner .header-nav.active {
+header .header-nav.active {
   visibility: visible;
   opacity: 1;
 }
-.header-inner .hamburger {
-  width: 48px;
-  height: 100%;
-  background-color: transparent;
+header .hamburger {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  width: 75px;
+  height: 75px;
+  background-color: #ff2a2a;
   border-color: transparent;
+  box-sizing: border-box;
+  vertical-align: top;
   cursor: pointer;
 }
-.header-inner .hamburger span {
-  width: 100%;
+header .hamburger span {
+  position: absolute;
+  top: 19px;
+  left: 17px;
+  display: inline-block;
+  width: 35px;
   height: 2px;
-  background-color: #000;
-  position: relative;
+  background-color: #fff;
   transition: ease 0.4s;
-  display: block;
 }
-.header-inner .hamburger span:nth-child(1) {
-  top: 0;
+header .hamburger span:nth-child(1) {
+  margin-top: 5px;
 }
-.header-inner .hamburger span:nth-child(2) {
-  margin: 8px 0;
+header .hamburger span:nth-child(2) {
+  margin-top: 15px;
 }
-.header-inner .hamburger span:nth-child(3) {
-  top: 0;
+header .hamburger span:nth-child(3) {
+  margin-top: 25px;
 }
-.header-inner .hamburger.active span:nth-child(1) {
-  top: 5px;
+header .hamburger.active span:nth-child(1) {
+  top: 38px;
   transform: rotate(-45deg);
 }
-.header-inner .hamburger.active span:nth-child(2) {
+header .hamburger.active span:nth-child(2) {
   opacity: 0;
 }
-.header-inner .hamburger.active span:nth-child(3) {
-  top: -13px;
+header .hamburger.active span:nth-child(3) {
   transform: rotate(45deg);
 }
 /*# sourceMappingURL=style.css.map */
