--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,18 +6,11 @@ ul {
   list-style: none;
 }
 
-.header-inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
+header {
   h1 {
     width: 100px;
     img {
       margin: 25px 0 0 25px;
-      display: block;
-      width: 100%;
-      height: 100%;
     }
   }
   .header-nav {
@@ -37,26 +30,34 @@ ul {
     }
   }
   .hamburger {
-    width: 48px;
-    height: 100%;
-    background-color: transparent;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: inline-block;
+    width: 75px;
+    height: 75px;
+    background-color: #ff2a2a;
     border-color: transparent;
+    box-sizing: border-box;
+    vertical-align: top;
     cursor: pointer;
     span {
-      width: 100%;
+      position: absolute;
+      top: 19px;
+      left: 17px;
+      display: inline-block;
+      width: 35px;
       height: 2px;
-      background-color: #000;
-      position: relative;
+      background-color: #fff;
       transition: ease 0.4s;
-      display: block;
       &:nth-child(1) {
-        top: 0;
+        margin-top: 5px;
       }
       &:nth-child(2) {
-        margin: 8px 0;
+        margin-top: 15px;
       }
       &:nth-child(3) {
-        top: 0;
+        margin-top: 25px;
       }
     }
   }
@@ -64,14 +65,13 @@ ul {
   .hamburger.active {
     span {
       &:nth-child(1) {
-        top: 5px;
+        top: 38px;
         transform: rotate(-45deg);
       }
       &:nth-child(2) {
         opacity: 0;
       }
       &:nth-child(3) {
-        top: -13px;
         transform: rotate(45deg);
       }
     }
