--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,25 @@ header .header-nav {
   width: 100%;
   height: 100vh;
   background-color: #ff2a2a;
+  text-align: center;
+}
+header .header-nav img {
+  width: 100px;
+  margin: 25px 0 30px 25px;
+}
+header .header-nav ul li {
+  margin-bottom: 20px;
+}
+header .header-nav ul li a {
+  color: #fff;
+  font-size: 16px;
+}
+header .header-nav ul .nav-btn {
+  margin-top: 50px;
+}
+header .header-nav ul .nav-btn a {
+  border: 1px solid #fff;
+  padding: 15px 50px;
 }
 header .header-nav.active {
   visibility: visible;
