--- a/styles/style.scss
+++ b/styles/style.scss
@@ -24,6 +24,27 @@ header {
     width: 100%;
     height: 100vh;
     background-color: #ff2a2a;
+    text-align: center;
+    img {
+      width: 100px;
+      margin: 25px 0 30px 25px;
+    }
+    ul {
+      li {
+        margin-bottom: 20px;
+        a {
+          color: #fff;
+          font-size: 16px;
+        }
+      }
+      .nav-btn {
+        margin-top: 50px;
+        a {
+          border: 1px solid#fff;
+          padding: 15px 50px;
+        }
+      }
+    }
     &.active {
       visibility: visible;
       opacity: 1;
