--- a/styles/style.css
+++ b/styles/style.css
@@ -110,4 +110,9 @@ header .hamburger.active span:nth-child(2) {
 header .hamburger.active span:nth-child(3) {
   transform: rotate(45deg);
 }
+
+.top .top-img img {
+  width: 100%;
+  height: 300px;
+}
 /*# sourceMappingURL=style.css.map */
