--- a/styles/style.css
+++ b/styles/style.css
@@ -111,8 +111,21 @@ header .hamburger.active span:nth-child(3) {
   transform: rotate(45deg);
 }
 
+.top {
+  position: relative;
+}
 .top .top-img img {
   width: 100%;
   height: 300px;
+}
+.top ::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: 300px;
+  box-shadow: 0px 0px 10px 10px #fff inset;
 }
 /*# sourceMappingURL=style.css.map */
