--- a/styles/style.scss
+++ b/styles/style.scss
@@ -122,10 +122,21 @@ header {
 }
 
 .top {
+  position: relative;
   .top-img {
     img {
       width: 100%;
       height: 300px;
     }
+  }
+  ::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    height: 300px;
+    box-shadow: 0px 0px 10px 10px #fff inset;
   }
 }
