--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,7 @@ header .header-nav {
   height: 100vh;
   background-color: #ff2a2a;
   text-align: center;
+  z-index: 100;
 }
 header .header-nav img {
   width: 100px;
@@ -79,6 +80,7 @@ header .hamburger {
   border-color: transparent;
   box-sizing: border-box;
   vertical-align: top;
+  z-index: 200;
   cursor: pointer;
 }
 header .hamburger span {
@@ -114,18 +116,87 @@ header .hamburger.active span:nth-child(3) {
 .top {
   position: relative;
 }
-.top .top-img img {
+.top .top-img .slider {
   width: 100%;
   height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: inline-block;
+  overflow: hidden;
 }
-.top ::after {
+@media screen and (min-width: 960px) {
+  .top .top-img .slider {
+    position: absolute;
+    top: 100px;
+    right: 0;
+    width: 70%;
+    height: 720px;
+  }
+}
+.top .top-img:after {
   content: "";
   position: absolute;
+  width: 100%;
+  height: 300px;
+  display: block;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
-  height: 300px;
   box-shadow: 0px 0px 10px 10px #fff inset;
+}
+@media screen and (min-width: 960px) {
+  .top .top-img:after {
+    top: 100px;
+    right: 0;
+    left: auto;
+    width: 70%;
+    height: 720px;
+  }
+}
+.top .top-text {
+  font-size: 22px;
+  font-weight: bold;
+}
+@media screen and (min-width: 960px) {
+  .top .top-text {
+    position: absolute;
+    top: 270px;
+    left: 135px;
+    width: 460px;
+  }
+}
+.top .top-text h2 {
+  margin-left: 16px;
+}
+@media screen and (min-width: 960px) {
+  .top .top-text h2 {
+    font-size: 46px;
+    text-shadow: #fff 0 3px 6px;
+  }
+}
+.top .top-text button {
+  outline: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: none;
+  padding: 0;
+  width: 90%;
+  height: 60px;
+  background-color: #ff2a2a;
+  border-radius: 10px;
+  display: block;
+  margin: auto;
+  cursor: pointer;
+  box-shadow: 0 8px #7a051c;
+  transition: 0.4s;
+}
+.top .top-text button a {
+  color: #fff;
+}
+.top .top-text button:hover {
+  transform: scale(1.1, 1.1);
+  transition: 0.4s;
 }
 /*# sourceMappingURL=style.css.map */
