--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,5 @@
+@import "./mixin";
+
 a {
   text-decoration: none;
 }
@@ -25,6 +27,7 @@ header {
     height: 100vh;
     background-color: #ff2a2a;
     text-align: center;
+    z-index: 100;
     img {
       width: 100px;
       margin: 25px 0 30px 25px;
@@ -83,6 +86,7 @@ header {
     border-color: transparent;
     box-sizing: border-box;
     vertical-align: top;
+    z-index: 200;
     cursor: pointer;
     span {
       position: absolute;
@@ -124,19 +128,79 @@ header {
 .top {
   position: relative;
   .top-img {
-    img {
+    .slider {
       width: 100%;
       height: 300px;
+      object-fit: cover;
+      display: inline-block;
+      overflow: hidden;
+      @include pc {
+        position: absolute;
+        top: 100px;
+        right: 0;
+        width: 70%;
+        height: 720px;
+      }
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 300px;
+      display: block;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      box-shadow: 0px 0px 10px 10px #fff inset;
+      @include pc {
+        top: 100px;
+        right: 0;
+        left: auto;
+        width: 70%;
+        height: 720px;
+      }
     }
   }
-  ::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    height: 300px;
-    box-shadow: 0px 0px 10px 10px #fff inset;
+
+  .top-text {
+    @include pc {
+      position: absolute;
+      top: 270px;
+      left: 135px;
+      width: 460px;
+    }
+    h2 {
+      margin-left: 16px;
+      @include pc {
+        font-size: 46px;
+        text-shadow: #fff 0 3px 6px;
+      }
+    }
+    font-size: 22px;
+    font-weight: bold;
+    button {
+      outline: none;
+      appearance: none;
+      border: none;
+      padding: 0;
+      width: 90%;
+      height: 60px;
+      background-color: #ff2a2a;
+      border-radius: 10px;
+      display: block;
+      margin: auto;
+      cursor: pointer;
+      box-shadow: 0 8px#7a051c;
+      transition: 0.4s;
+      a {
+        color: #fff;
+      }
+      &:hover {
+        transform: scale(1.1, 1.1);
+        transition: 0.4s;
+      }
+    }
   }
 }
