--- a/styles/style.css
+++ b/styles/style.css
@@ -113,7 +113,7 @@ header .hamburger.active span:nth-child(3) {
   transform: rotate(45deg);
 }
 
-.top {
+.top .top-img {
   position: relative;
 }
 .top .top-img .slider {
@@ -126,11 +126,11 @@ header .hamburger.active span:nth-child(3) {
 }
 @media screen and (min-width: 960px) {
   .top .top-img .slider {
-    position: absolute;
-    top: 100px;
-    right: 0;
     width: 70%;
     height: 720px;
+    margin-right: 0;
+    margin-left: auto;
+    display: block;
   }
 }
 .top .top-img:after {
@@ -147,7 +147,7 @@ header .hamburger.active span:nth-child(3) {
 }
 @media screen and (min-width: 960px) {
   .top .top-img:after {
-    top: 100px;
+    top: 0;
     right: 0;
     left: auto;
     width: 70%;
@@ -198,5 +198,23 @@ header .hamburger.active span:nth-child(3) {
 .top .top-text button:hover {
   transform: scale(1.1, 1.1);
   transition: 0.4s;
+}
+
+.section-title {
+  position: relative;
+  font-size: 28px;
+  text-align: center;
+}
+.section-title:after {
+  content: "";
+  width: 100px;
+  height: 3px;
+  background-color: #333;
+  display: block;
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 /*# sourceMappingURL=style.css.map */
