--- a/styles/style.scss
+++ b/styles/style.scss
@@ -126,14 +126,13 @@ header {
 }
 
 .top {
+  margin-bottom: 86px;
   .top-img {
     position: relative;
     .slider {
       width: 100%;
       height: 300px;
       object-fit: cover;
-      display: inline-block;
-      overflow: hidden;
       @include pc {
         width: 70%;
         height: 720px;
@@ -155,8 +154,6 @@ header {
       left: 0;
       box-shadow: 0px 0px 10px 10px #fff inset;
       @include pc {
-        top: 0;
-        right: 0;
         left: auto;
         width: 70%;
         height: 720px;
@@ -209,6 +206,7 @@ header {
   position: relative;
   font-size: 28px;
   text-align: center;
+  margin-bottom: 60px;
 
   &:after {
     content: "";
