--- a/styles/style.scss
+++ b/styles/style.scss
@@ -221,3 +221,44 @@ header {
     margin: 0 auto;
   }
 }
+
+.reason-content {
+  background-color: #ff2a2a;
+  padding: 40px 0;
+  .reason-text1 {
+    background-color: #fff;
+    width: 95%;
+    height: 120px;
+    border-radius: 0 15px 15px 0;
+    display: flex;
+  }
+  .reason-text2 {
+    background-color: #fff;
+    border-radius: 15px 0 0 15px;
+    margin-top: 30px;
+    display: flex;
+    justify-content: flex-end;
+    width: calc(100% - 16px);
+    transform: translateX(16px);
+    height: 120px;
+  }
+  .item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .fa-solid {
+      font-size: 60px;
+      margin: 0 30px;
+    }
+  }
+  .item-text {
+    margin: 18px 0;
+    h3 {
+      color: #ff2a2a;
+      font-size: 24px;
+    }
+    p {
+      font-size: 18px;
+    }
+  }
+}
