--- a/styles/style.css
+++ b/styles/style.css
@@ -221,7 +221,6 @@ header .hamburger.active span:nth-child(3) {
 .reason-content {
   background-color: #ff2a2a;
   padding: 40px 0;
-  text-align: center;
 }
 .reason-content .reason-text1 {
   background-color: #fff;
@@ -229,6 +228,13 @@ header .hamburger.active span:nth-child(3) {
   height: 120px;
   border-radius: 0 15px 15px 0;
   display: flex;
+  justify-content: flex-end;
+  position: relative;
+}
+@media screen and (min-width: 960px) {
+  .reason-content .reason-text1 {
+    width: 50%;
+  }
 }
 .reason-content .reason-text2 {
   background-color: #fff;
@@ -240,17 +246,22 @@ header .hamburger.active span:nth-child(3) {
   transform: translateX(16px);
   height: 120px;
 }
+@media screen and (min-width: 960px) {
+  .reason-content .reason-text2 {
+    width: 50%;
+    transform: translateX(100%);
+  }
+}
 .reason-content .item {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 .reason-content .item .fa-solid {
   font-size: 60px;
-  margin: 0 30px;
 }
 .reason-content .item-text {
-  margin: 18px 0;
+  width: 60%;
+  margin: auto 30px;
 }
 .reason-content .item-text h3 {
   color: #ff2a2a;
