--- a/styles/style.css
+++ b/styles/style.css
@@ -221,6 +221,7 @@ header .hamburger.active span:nth-child(3) {
 .reason-content {
   background-color: #ff2a2a;
   padding: 40px 0;
+  /*===== inview =====*/
 }
 .reason-content .reason-text1 {
   background-color: #fff;
@@ -229,12 +230,20 @@ header .hamburger.active span:nth-child(3) {
   border-radius: 0 15px 15px 0;
   display: flex;
   justify-content: flex-end;
-  position: relative;
 }
 @media screen and (min-width: 960px) {
   .reason-content .reason-text1 {
     width: 50%;
   }
+}
+.reason-content .fadeIn-left {
+  opacity: 0;
+  transform: translate(-50%, 0);
+  transition: 1s;
+}
+.reason-content .is-show {
+  transform: translate(0, 0);
+  opacity: 1;
 }
 .reason-content .reason-text2 {
   background-color: #fff;
