--- a/styles/style.scss
+++ b/styles/style.scss
@@ -323,3 +323,18 @@ header {
     border-width: 20px 20px 0 20px;
   }
 }
+
+.voice-profile {
+  text-align: center;
+  img {
+    background-color: #ccc;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+  }
+  p {
+    font-size: 12px;
+  }
+}
