--- a/styles/style.scss
+++ b/styles/style.scss
@@ -299,42 +299,59 @@ header {
   }
 }
 
-.voice-text {
-  background-color: #e9f1fb;
-  margin: 30px 16px;
-  padding: 20px 13px;
-  border-radius: 15px;
-  font-size: 20px;
-  position: relative;
-  .balloon {
-    background: #e9f1fb;
+.voice-content {
+  @include pc {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
   }
-  &:after {
-    content: "";
-    position: absolute;
-    right: 0;
-    bottom: -20px;
-    left: 0;
-    width: 0;
-    height: 0;
-    margin: auto;
-    border-style: solid;
-    border-color: #e9f1fb transparent transparent transparent;
-    border-width: 20px 20px 0 20px;
+  .voice-text {
+    background-color: #e9f1fb;
+    margin: 30px 16px;
+    padding: 20px 13px;
+    border-radius: 15px;
+    font-size: 20px;
+    position: relative;
+    @include pc {
+      width: 514px;
+      height: 142px;
+    }
+    .balloon {
+      background: #e9f1fb;
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      right: 0;
+      bottom: -20px;
+      left: 0;
+      width: 0;
+      height: 0;
+      margin: auto;
+      border-style: solid;
+      border-color: #e9f1fb transparent transparent transparent;
+      border-width: 20px 20px 0 20px;
+    }
+  }
+
+  .voice-profile {
+    text-align: center;
+    img {
+      background-color: #ccc;
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      margin: 0 auto;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 12px;
+    }
   }
 }
 
-.voice-profile {
-  text-align: center;
-  img {
-    background-color: #ccc;
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    margin: 0 auto;
-    margin-bottom: 10px;
-  }
-  p {
-    font-size: 12px;
+.voice-flex {
+  @include pc {
+    flex-direction: row;
   }
 }
