--- a/styles/style.scss
+++ b/styles/style.scss
@@ -380,3 +380,22 @@ header {
     margin-right: -20%;
   }
 }
+
+.zoomIn {
+  animation-name: zoomInAnime;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes zoomInAnime {
+  from {
+    opacity: 0;
+    transform: scale(0.6);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
