--- a/styles/style.css
+++ b/styles/style.css
@@ -408,4 +408,41 @@ header .hamburger.active span:nth-child(3) {
     transform: scale(1);
   }
 }
+.summary {
+  background-color: #e8e8e8;
+  margin-top: 80px;
+}
+.summary .summary-item {
+  width: 343px;
+  height: 232px;
+  background-color: #fff;
+  margin: 32px auto;
+  border-radius: 20px;
+  text-align: center;
+}
+@media screen and (min-width: 960px) {
+  .summary .summary-item {
+    margin: 15px 30px;
+  }
+}
+.summary .summary-item .item-title {
+  padding-top: 30px;
+  font-size: 24px;
+  font-weight: bold;
+}
+.summary .summary-item .item-subtitle {
+  margin-top: 15px;
+  font-size: 16px;
+  font-weight: bold;
+}
+.summary .summary-item .item-text {
+  margin: 30px;
+  font-size: 16px;
+}
+@media screen and (min-width: 960px) {
+  .summary .summary-container {
+    display: flex;
+    justify-content: center;
+  }
+}
 /*# sourceMappingURL=style.css.map */
