--- a/styles/style.scss
+++ b/styles/style.scss
@@ -406,6 +406,7 @@ header {
   animation: bg 10s infinite linear;
   background-color: #e8e8e8;
   margin-top: 80px;
+  padding-bottom: 60px;
 
   @keyframes bg {
     0% {
