--- a/styles/style.scss
+++ b/styles/style.scss
@@ -458,3 +458,45 @@ header {
     }
   }
 }
+
+.entry {
+  margin-top: 80px;
+  text-align: center;
+  h2 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+  p {
+    font-size: 16px;
+    margin-top: 5px;
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+  button {
+    background-color: #ff2a2a;
+    color: #fff;
+    border: none;
+    border-radius: 40px;
+    width: 85%;
+    height: 61px;
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 40px;
+
+    cursor: pointer;
+    &:hover {
+      background-color: #fff;
+      color: #ff2a2a;
+      border: solid 3px #ff2a2a;
+      transition: 0.4s;
+    }
+
+    @include pc {
+      width: 50%;
+    }
+  }
+}
