--- a/styles/style.css
+++ b/styles/style.css
@@ -509,4 +509,32 @@ header .hamburger.active span:nth-child(3) {
     width: 50%;
   }
 }
+
+footer {
+  margin-top: 80px;
+  background-color: #e8e8e8;
+}
+footer .menu {
+  padding-top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+}
+footer .menu ul {
+  width: 50%;
+  margin-bottom: 30px;
+}
+footer .menu ul .menu-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+footer .menu ul li {
+  font-size: 15px;
+  cursor: pointer;
+}
+footer .copyright {
+  text-align: center;
+  margin-top: 60px;
+  padding-bottom: 20px;
+}
 /*# sourceMappingURL=style.css.map */
