--- a/styles/style.scss
+++ b/styles/style.scss
@@ -509,19 +509,24 @@ footer {
     display: flex;
     flex-wrap: wrap;
 
+    @include pc {
+      flex-wrap: nowrap;
+    }
+
     ul {
       width: 50%;
       margin-bottom: 30px;
+
+      li {
+        font-size: 15px;
+        cursor: pointer;
+      }
 
       .menu-title {
         font-size: 18px;
         font-weight: bold;
         margin-bottom: 10px;
-      }
-
-      li {
-        font-size: 15px;
-        cursor: pointer;
+        cursor: auto;
       }
     }
   }
