--- a/styles/style.scss
+++ b/styles/style.scss
@@ -73,10 +73,13 @@ header {
     &.active {
       visibility: visible;
       opacity: 1;
+      position: fixed;
+      top: 0;
+      z-index: 20;
     }
   }
   .hamburger {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     display: inline-block;
