html全体のフォントサイズ変更

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,14 @@
 @charset "UTF-8";
+/* ルートのフォントサイズを10pxに設定 */
+html {
+  font-size: 62.5%;
+}
+
+/* bodyのフォントサイズを1.6em(16px)に設定 */
+body {
+  font-size: 1.6em;
+}
+
 a {
   text-decoration: none;
 }
@@ -7,7 +17,7 @@ ul {
   list-style: none;
 }
 
-/* ==========  ========== */
+/* ========== header ========== */
 header {
   /* ========= ハンバーガーメニュークリック後 ========== */
 }
