--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,7 +7,7 @@ html {
 
 /* bodyのフォントサイズを1.6em(16px)に設定 */
 body {
-  font-size: 1.6em;
+  font-size: 1.6rem;
 }
 
 a {
@@ -49,7 +49,7 @@ header {
         font-weight: bold;
         a {
           color: #fff;
-          font-size: 16px;
+          font-size: 1.6rem;
         }
       }
       .nav-btn {
@@ -186,11 +186,11 @@ header {
     h2 {
       margin-left: 16px;
       @include pc {
-        font-size: 46px;
+        font-size: 4.6rem;
         text-shadow: #fff 0 3px 6px;
       }
     }
-    font-size: 22px;
+    font-size: 2.2rem;
     font-weight: bold;
     button {
       outline: none;
@@ -220,7 +220,7 @@ header {
 /* ========== reason ========= */
 .section-title {
   position: relative;
-  font-size: 28px;
+  font-size: 2.8rem;
   text-align: center;
   margin-bottom: 60px;
 
@@ -296,7 +296,7 @@ header {
     display: flex;
     align-items: center;
     .fa-solid {
-      font-size: 60px;
+      font-size: 6rem;
     }
   }
   .item-text {
@@ -304,10 +304,10 @@ header {
     margin: auto 30px;
     h3 {
       color: #ff2a2a;
-      font-size: 24px;
+      font-size: 2.4rem;
     }
     p {
-      font-size: 18px;
+      font-size: 1.8rem;
     }
   }
 }
@@ -327,7 +327,7 @@ header {
     border-radius: 15px;
     position: relative;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1.6rem;
     background: #e0edff;
 
     @include pc {
@@ -383,7 +383,7 @@ header {
       margin-bottom: 10px;
     }
     p {
-      font-size: 12px;
+      font-size: 1.2rem;
     }
   }
 }
@@ -450,19 +450,19 @@ header {
 
     .item-title {
       padding-top: 30px;
-      font-size: 24px;
+      font-size: 2.4rem;
       font-weight: bold;
     }
 
     .item-subtitle {
       margin-top: 15px;
-      font-size: 16px;
+      font-size: 1.6rem;
       font-weight: bold;
     }
 
     .item-text {
       margin: 30px;
-      font-size: 16px;
+      font-size: 1.6rem;
     }
   }
 
@@ -479,14 +479,14 @@ header {
   margin-top: 80px;
   text-align: center;
   h2 {
-    font-size: 24px;
+    font-size: 2.4rem;
     font-weight: bold;
     margin-right: 15px;
     margin-left: 15px;
   }
 
   p {
-    font-size: 16px;
+    font-size: 1.6rem;
     margin-top: 5px;
     margin-right: 15px;
     margin-left: 15px;
@@ -499,7 +499,7 @@ header {
     border-radius: 40px;
     width: 85%;
     height: 61px;
-    font-size: 24px;
+    font-size: 2.4rem;
     font-weight: bold;
     margin-top: 40px;
 
@@ -535,12 +535,12 @@ footer {
       margin-bottom: 30px;
 
       li {
-        font-size: 15px;
+        font-size: 1.5rem;
         cursor: pointer;
       }
 
       .menu-title {
-        font-size: 18px;
+        font-size: 1.8rem;
         font-weight: bold;
         margin-bottom: 10px;
         cursor: auto;
