--- a/styles/style.css
+++ b/styles/style.css
@@ -391,7 +391,7 @@ header .hamburger.active span:nth-child(3) {
 @media screen and (min-width: 960px) {
   .voice-flex {
     flex-direction: row;
-    margin-right: -20%;
+    margin-left: 30%;
   }
 }
 
